Added working UserController + Service (no Events)
